--- a/grafika/lab/lab2/CMakeLists.txt
+++ b/grafika/lab/lab2/CMakeLists.txt
@@ -24,6 +24,6 @@ include_directories(${INCLUDES})
 
 file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/*.cpp")
 
-add_executable(${PROJECT_NAME} main.cpp ${SOURCES})
+add_executable(${PROJECT_NAME} olek.cpp ${SOURCES})
 #target_link_options(${PROJECT_NAME} PUBLIC -lsfml-system -lsfml-graphics -lsfml-window)
 target_link_libraries(${PROJECT_NAME} PRIVATE sfml-graphics)
