--- a/cpp/.vscode/settings.json
+++ b/cpp/.vscode/settings.json
@@ -49,6 +49,33 @@
 		"numeric": "cpp",
 		"random": "cpp",
 		"fstream": "cpp",
-		"sstream": "cpp"
+		"sstream": "cpp",
+		"any": "cpp",
+		"bitset": "cpp",
+		"cfenv": "cpp",
+		"charconv": "cpp",
+		"chrono": "cpp",
+		"cinttypes": "cpp",
+		"codecvt": "cpp",
+		"complex": "cpp",
+		"condition_variable": "cpp",
+		"csetjmp": "cpp",
+		"csignal": "cpp",
+		"ctime": "cpp",
+		"cuchar": "cpp",
+		"forward_list": "cpp",
+		"map": "cpp",
+		"unordered_set": "cpp",
+		"ratio": "cpp",
+		"regex": "cpp",
+		"future": "cpp",
+		"iomanip": "cpp",
+		"mutex": "cpp",
+		"scoped_allocator": "cpp",
+		"shared_mutex": "cpp",
+		"thread": "cpp",
+		"typeindex": "cpp",
+		"valarray": "cpp",
+		"variant": "cpp"
 	}
 }
