--- a/cpp/.vscode/settings.json
+++ b/cpp/.vscode/settings.json
@@ -75,5 +75,6 @@
 		"typeinfo": "cpp",
 		"valarray": "cpp",
 		"variant": "cpp"
-	}
+	},
+	"cmake.sourceDirectory": "/home/skolanko222/AGH/cpp/w/testy/virtual getter"
 }
