--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "lab1"
+rootProject.name = "My Application"
 include ':app'
